try fix vertical-align

--- a/recruser-shared.css
+++ b/recruser-shared.css
@@ -2,6 +2,12 @@
     --recruser-color: #0ca789 !important;
 }
 
+.recruser div, span {
+    vertical-align: unset !important;
+}
+
+abbr, address, article, aside, audio, b, blockquote, body, canvas, caption, cite, code, dd, del, details, dfn, div, dl, dt, em, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, kbd, label, legend, li, mark, menu, nav, object, ol, p, pre, q, samp, section, small, span, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, ul, var, video
+
 .recruser-theme-btn {
     color: grey !important;
     border: 1px solid var(--recruser-color) !important;
